Refactoring repositories for jpa and domain entities